syntax = "proto3";
package hypersignprotocol.hidnode.ssi;
option go_package = "github.com/hypersign-protocol/hid-node/x/ssi/types";

import "ssi/v1/tx.proto";

message Did {
  repeated string context = 1;
  string id = 2;
  repeated string controller = 3; // DID Controller Spec: https://www.w3.org/TR/did-core/#did-controller
  repeated string alsoKnownAs = 4;
  repeated VerificationMethod verificationMethod = 5;
  repeated string authentication = 6;
  repeated string assertionMethod = 7;
  repeated string keyAgreement = 8;
  repeated string capabilityInvocation = 9;
  string created = 10;
  string updated = 11;
}